Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1272

Bad error status if RPC call is made with deadline in the past

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.6.0
    • 0.7.0
    • rpc
    • None

    Description

      In many places, we use a deadline to calculate a timeout. If the deadline has already passed when we submit the RPC, we get an error like:

      I1124 13:21:39.261135 15815 runtime-state.cc:228] Error from query d24cf508e3437ab5:1ac8794be69d81a9: Unable to open scanner: Timed out: Scan RPC to 10.17.223.30:7050 timed out after -0.181s

      which doesn't make a lot of sense. We should improve the error in this case to be more understandable.

      Attachments

        Activity

          People

            adar Adar Dembo
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: